--- a/app/src/main/res/layout/act_detail.xml
+++ b/app/src/main/res/layout/act_detail.xml
@@ -11,145 +11,10 @@
         android:layout_width="match_parent"
         android:layout_height="56dp" />
 
-    <FrameLayout
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:background="@color/md_white"
-        android:padding="10dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/md_grey_400"
-            android:orientation="vertical"
-            android:padding="1px">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="120dp"
-                    android:layout_height="match_parent"
-                    android:background="@color/md_grey_100"
-                    android:gravity="center"
-                    android:text="陪同人员"
-                    android:textColor="@color/md_black"
-                    android:textSize="15dp" />
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="1px"
-                    android:layout_weight="1"
-                    android:background="@color/md_white"
-                    android:gravity="center_vertical"
-                    android:paddingStart="16dp"
-                    android:text="苏夏 詹光喜"
-                    android:textColor="@color/md_black"
-                    android:textSize="15dp" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginTop="1px"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="120dp"
-                    android:layout_height="match_parent"
-                    android:background="@color/md_grey_100"
-                    android:gravity="center"
-                    android:text="来访事由"
-                    android:textColor="@color/md_black"
-                    android:textSize="15dp" />
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="1px"
-                    android:layout_weight="1"
-                    android:background="@color/md_white"
-                    android:gravity="center_vertical"
-                    android:paddingStart="16dp"
-                    android:text="来访事由、时间及行程安排"
-                    android:textColor="@color/md_black"
-                    android:textSize="15dp" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/adViceContainer"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    android:layout_marginTop="1px"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="120dp"
-                        android:layout_height="match_parent"
-                        android:background="@color/md_grey_100"
-                        android:gravity="center"
-                        android:text="部门领导\n意见"
-                        android:textColor="@color/md_black"
-                        android:textSize="15dp" />
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginStart="1px"
-                        android:layout_weight="1"
-                        android:background="@color/md_white"
-                        android:gravity="center_vertical"
-                        android:paddingStart="16dp"
-                        android:text="来访事由、时间及行程安排"
-                        android:textColor="@color/md_black"
-                        android:textSize="15dp" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    android:layout_marginTop="1px"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="120dp"
-                        android:layout_height="match_parent"
-                        android:background="@color/md_grey_100"
-                        android:gravity="center"
-                        android:text="部门领导\n意见"
-                        android:textColor="@color/md_black"
-                        android:textSize="15dp" />
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginStart="1px"
-                        android:layout_weight="1"
-                        android:background="@color/md_white"
-                        android:gravity="center_vertical"
-                        android:paddingStart="16dp"
-                        android:text="来访事由、时间及行程安排"
-                        android:textColor="@color/md_black"
-                        android:textSize="15dp" />
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-    </FrameLayout>
+        android:layout_weight="1" />
 
 </LinearLayout>
