--- a/app/src/main/res/layout/header_view_sbbf.xml
+++ b/app/src/main/res/layout/header_view_sbbf.xml
@@ -168,7 +168,7 @@
             android:textSize="14dp" />
 
         <TextView
-            android:id="@+id/tvEquipment"
+            android:id="@+id/tvSbbfDetail"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
