--- a/app/src/main/res/layout/header_view_wply.xml
+++ b/app/src/main/res/layout/header_view_wply.xml
@@ -170,7 +170,7 @@
             android:textSize="14dp" />
 
         <TextView
-            android:id="@+id/tvWply"
+            android:id="@+id/tvWplyDetail"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
